--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/meanjs/mean.git"
+    "url": "https://github.com/JJ81/clipplr-meanjs-practice.git"
   },
   "engines": {
     "node": ">=0.10.28",
